# p7

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: llm-integration.yml  python-ci.yml
api/: app.py  requirements.txt
api/services/: generation.py  grammar.py  models.py  streaming.py
benchmarks/: README.md  agg.py  mk.py  run.py
benchmarks/data/: fun.csv  imp.csv  spec.csv  stlc.csv
demo/: .npmrc  package-lock.json  package.json
demo/public/: config.js  index.html
demo/src/: App.js  config.js
demo/src/components/: DebugPanel.js  GenerationPanel.js  GrammarEditor.js  Header.js
demo/src/pages/: DemoPage.js  HomePage.js  LabPage.js
docs/: ast.md  binding.md  challenges.md  completion.md  grammar.md  partial.md
examples/: clike.spec  gpt2.py  perf.py  phi.py  pleias.py  sample.py  stlc.spec  test.py  xtlc.spec
extra/vscode-p7-syntax/: example.spec
notebooks/: constrained_generator_bench.ipynb  pleias.ipynb
p7/: __init__.py  environment.py  grammars.py  inference.py  llm.py  sampler.py
p7/models/: __init__.py  deepseek.py  glm.py  llama.py  mistral.py  pleias.py
proposition_7/: __init__.py  environment.py  grammars.py  llm.py  sampler.py
proposition_7/models/: chat.py
python/: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
python/examples/: gpt2.py  phi.py  sample.py  test.py
python/proposition_7/: __init__.py  grammars.py  llm.py  sampler.py
python/src/: lib.rs
scripts/: remote_benchmark.sh  remote_deploy.sh
src/: lib.rs  mod.rs  regex.rs  test.rs
src/cli/logic/: mod.rs
src/logic/: tokenizer.rs
src/logic/ast/: mod.rs
src/logic/bind/: mod.rs  typing.rs
src/logic/grammar/: binding.rs  load.rs  mod.rs  save.rs  tests.rs  utils.rs
src/logic/partial/: binding.rs  completion.rs  display.rs  mod.rs  parse.rs  structure.rs  typing.rs
src/logic/tests/: clike.rs  xtlc.rs
src/logic/typing/: core.rs  eval.rs  mod.rs  rule.rs  syntax.rs
src/logic/typing/tests/: contradiction.rs  mod.rs  repro.rs
src/validation/: completability.rs  mod.rs
src/viz/: graph.rs  viz.rs
src/viz/static/: app.js  index.html  styles.css
tests/: test_inference.py  test_sampler.py
visualization/: README.md  start.sh
