[package]
name = "p7"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/mod.rs"

[[bin]]
name = "beam"
path = "src/main.rs"

[dependencies]
regex = "1.10"
bimap = "0.6.3"
once_cell = "1.17.1"
clap = { version = "4.5", features = ["derive"] }
anstream = "0.6"
anstyle = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rouille = "3.6.2"
anyhow = "1.0.100"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.20"
rayon = "1.11.0"
regex-syntax = "0.8.6"

[dev-dependencies]
proptest = "1"

