[package]
name = "proposition_7_py"
version = "0.1.0"
edition = "2021"
authors = ["Paul Kronlund-Drouault"]
description = "Python bindings for P7 - Type-aware constrained decoding for LLMs"
license = "MIT"
repository = "https://github.com/Unsuspicious-Industries/p7"
readme = "README.md"

[lib]
name = "proposition_7"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
aufbau = { version = "0.1.0" }
