[package]
name = "p7"
version = "0.1.0"
edition = "2021"
authors = ["Paul Kronlund-Drouault"]
description = "Proposition 7: system-agnostic formally constrained generation for Large Language Models"
license = "MIT"
repository = "https://github.com/Unsuspicious-Industries/p7"
readme = "README.md"

[lib]
name = "p7"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
aufbau = { version = "0.1.0" }
