[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "proposition_7"
version = "0.1.0"
description = "Type-aware constrained decoding for LLMs using the Proposition 7 grammar format"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Paul Kronlund-Drouault" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
]
keywords = ["llm", "constrained-decoding", "type-systems", "grammar", "code-generation"]

[project.urls]
Homepage = "https://unsuspicious.org/blog/proposition-7"
Repository = "https://github.com/Unsuspicious-Industries/p7"
Documentation = "https://github.com/Unsuspicious-Industries/p7"

[project.optional-dependencies]
transformers = ["transformers>=4.30.0", "torch>=2.0.0","accelerate"]
dev = ["pytest", "numpy", "flask>=2.3.0", "flask-cors>=4.0.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "p7.p7"
target-dir = "target"
