[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "proposition-7"
version = "0.1.0"
description = "Type-aware constrained decoding for LLMs using the Proposition 7 grammar format"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
]
keywords = ["llm", "constrained-decoding", "type-systems", "grammar", "code-generation"]

[project.optional-dependencies]
transformers = ["transformers>=4.30.0", "torch>=2.0.0"]
dev = ["pytest", "numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "proposition_7.proposition_7"

